--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_marginStart="20dp"
         android:gravity="center_vertical"
         android:fontFamily="@font/mycalc"
+        android:maxLines="1"
         android:textSize="72sp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@id/screenView"
@@ -52,7 +53,6 @@
         android:id="@+id/acButton"
         style="@style/whiteButton"
         android:text="AC"
-        android:onClick="screenFlush"
 
         app:layout_constraintBottom_toTopOf="@id/sevenButton"
         app:layout_constraintEnd_toStartOf="@id/changeSignButton"
@@ -63,7 +63,6 @@
         android:id="@+id/changeSignButton"
         style="@style/whiteButton"
         android:text="+/-"
-        android:onClick="onClickChangeSign"
 
         app:layout_constraintBottom_toTopOf="@id/eightButton"
         app:layout_constraintEnd_toStartOf="@id/percentButton"
@@ -74,7 +73,6 @@
         android:id="@+id/percentButton"
         style="@style/whiteButton"
         android:text="%"
-        android:onClick="onClickPercent"
 
         app:layout_constraintBottom_toTopOf="@id/nineButton"
         app:layout_constraintEnd_toStartOf="@id/dividerButton"
@@ -85,7 +83,6 @@
         android:id="@+id/dividerButton"
         style="@style/purpleButton"
         android:text="/"
-        android:onClick="onClickSign"
 
         app:layout_constraintBottom_toTopOf="@id/multiplyButton"
         app:layout_constraintEnd_toEndOf="@id/rightGuideline"
@@ -97,7 +94,6 @@
         android:id="@+id/sevenButton"
         style="@style/whiteButton"
         android:text="7"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/fourButton"
         app:layout_constraintEnd_toStartOf="@id/eightButton"
@@ -108,7 +104,6 @@
         android:id="@+id/eightButton"
         style="@style/whiteButton"
         android:text="8"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/fiveButton"
         app:layout_constraintEnd_toStartOf="@id/nineButton"
@@ -119,7 +114,6 @@
         android:id="@+id/nineButton"
         style="@style/whiteButton"
         android:text="9"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/sixButton"
         app:layout_constraintEnd_toStartOf="@id/multiplyButton"
@@ -130,7 +124,6 @@
         android:id="@+id/multiplyButton"
         style="@style/purpleButton"
         android:text="*"
-        android:onClick="onClickSign"
 
         app:layout_constraintBottom_toTopOf="@id/minusButton"
         app:layout_constraintEnd_toEndOf="@id/rightGuideline"
@@ -142,7 +135,6 @@
         android:id="@+id/fourButton"
         style="@style/whiteButton"
         android:text="4"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/oneButton"
         app:layout_constraintEnd_toStartOf="@id/fiveButton"
@@ -153,7 +145,6 @@
         android:id="@+id/fiveButton"
         style="@style/whiteButton"
         android:text="5"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/twoButton"
         app:layout_constraintEnd_toStartOf="@id/sixButton"
@@ -164,7 +155,6 @@
         android:id="@+id/sixButton"
         style="@style/whiteButton"
         android:text="6"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/threeButton"
         app:layout_constraintEnd_toStartOf="@id/minusButton"
@@ -175,7 +165,6 @@
         android:id="@+id/minusButton"
         style="@style/purpleButton"
         android:text="-"
-        android:onClick="onClickSign"
 
         app:layout_constraintBottom_toTopOf="@id/plusButton"
         app:layout_constraintEnd_toEndOf="@id/rightGuideline"
@@ -187,7 +176,6 @@
         android:id="@+id/oneButton"
         style="@style/whiteButton"
         android:text="1"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/aboveZeroGuideline"
         app:layout_constraintEnd_toStartOf="@id/twoButton"
@@ -198,7 +186,6 @@
         android:id="@+id/twoButton"
         style="@style/whiteButton"
         android:text="2"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/aboveZeroGuideline"
         app:layout_constraintEnd_toStartOf="@id/threeButton"
@@ -209,7 +196,6 @@
         android:id="@+id/threeButton"
         style="@style/whiteButton"
         android:text="3"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toTopOf="@id/aboveZeroGuideline"
         app:layout_constraintEnd_toStartOf="@id/plusButton"
@@ -220,7 +206,6 @@
         android:id="@+id/plusButton"
         style="@style/purpleButton"
         android:text="+"
-        android:onClick="onClickSign"
 
         app:layout_constraintBottom_toTopOf="@id/aboveZeroGuideline"
         app:layout_constraintEnd_toEndOf="@id/rightGuideline"
@@ -232,7 +217,6 @@
         android:id="@+id/zeroButton"
         style="@style/whiteButton"
         android:text="0"
-        android:onClick="onClickNumber"
 
         app:layout_constraintBottom_toBottomOf="@id/underKeyboardGuideline"
         app:layout_constraintEnd_toStartOf="@id/CenterGuideline"
@@ -243,7 +227,6 @@
         android:id="@+id/pointButton"
         style="@style/whiteButton"
         android:text="."
-        android:onClick="onClickPoint"
 
         app:layout_constraintBottom_toBottomOf="@id/underKeyboardGuideline"
         app:layout_constraintEnd_toStartOf="@id/equalButton"
@@ -254,7 +237,6 @@
         android:id="@+id/equalButton"
         style="@style/purpleButton"
         android:text="="
-        android:onClick="onClickEqual"
 
         app:layout_constraintBottom_toBottomOf="@id/underKeyboardGuideline"
         app:layout_constraintEnd_toEndOf="@id/rightGuideline"
@@ -310,5 +292,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.80" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/buttonsGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="oneButton, twoButton, threeButton, fourButton, fiveButton,
+            sixButton, sevenButton, eightButton, nineButton, zeroButton,
+            plusButton,minusButton,multiplyButton,dividerButton,changeSignButton,
+            pointButton,equalButton,acButton,percentButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
