--- a/app/src/main/res/values/calcStyle.xml
+++ b/app/src/main/res/values/calcStyle.xml
@@ -8,7 +8,8 @@
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:layout_marginStart">4dp</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:background">@drawable/button_calc</item>
+        <item name="elevation">150dp</item>
+        <item name="cornerRadius">15dp</item>
 
     </style>
 
